--- a/pom.xml
+++ b/pom.xml
@@ -36,8 +36,9 @@
 	<build>
 		<plugins>
 			<plugin>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>3.3.1</version>
+				groupId>org.apache.maven.plugins</groupId>
+			        <artifactId>maven-surefire-plugin</artifactId>
+            			<version>3.0.0-M5</version> <!-- Use the latest stable version -->
 			</plugin>
 		</plugins>
 	</build>
